# Hiyobot

./: pyproject.toml
hiyobot/: client.py  paginator.py
hiyobot/commands/: __init__.py  hitomi.py  license.py
